# thynk

./: .dockerignore  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yml  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  PROJECT.md  README.md  ROADMAP.md  STATE.md  TODO.md  UX.md  VISION.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package.json  thynk-worker.sh  tsconfig.json  vite.config.ts
.github/workflows/: desktop.yml  docker.yml  qa.yml  release.yml
.hooks/: commit-msg  install.sh  pre-commit  pre-push
.planning/: design-decisions.md  questions.md
.planning/research/: competitor-analysis.md  tech-stack-analysis.md  user-loved-features.md
apps/web/: index.html
apps/web/src/: App.tsx  styles.css
coturn/: turnserver.conf
crates/thynk-cli/: Cargo.toml
crates/thynk-cli/src/: lib.rs  main.rs
crates/thynk-core/: Cargo.toml
crates/thynk-core/src/: config.rs  db.rs  error.rs  lib.rs  note.rs  storage.rs
crates/thynk-search/: Cargo.toml
crates/thynk-search/src/: lib.rs
crates/thynk-server/: Cargo.toml
crates/thynk-server/src/: main.rs  state.rs
crates/thynk-server/src/routes/: ai.rs  auth.rs  config.rs  export.rs  favorites.rs  invitations.rs  links.rs  locks.rs  mod.rs  notes.rs  notifications.rs  profiles.rs  search.rs  signaling.rs  sync.rs  tags.rs  templates.rs  tree.rs  uploads.rs  ws.rs
crates/thynk-sync/: Cargo.toml
crates/thynk-sync/src/: lib.rs
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  api.ts  globals.d.ts  index.css  main.tsx  types.ts
frontend/src/__tests__/: PresenceIndicator.test.tsx  api.test.ts  autoSave.test.ts  codeBlockCopy.test.ts  contentBuffer.test.ts  keyboard.test.ts  markdownNewlines.test.ts  mentionDetection.test.ts  modalEscape.test.tsx  noteStore.test.ts  notificationsBell.test.tsx  settingsModal.test.tsx  sidebarToggle.test.ts  slashCommand.test.ts  taskList.test.ts  themeSupport.test.tsx  url.test.ts  useCollaboration.test.ts  useLock.test.ts  vitest.setup.ts
frontend/src/components/: ActivityFeed.tsx  AiCompletionMenu.tsx  AutomationLog.tsx  BacklinksPanel.tsx  CalendarView.tsx  CommandPalette.tsx  CommandPaletteInner.tsx  DailyNoteButton.tsx  DailyNoteCalendar.tsx  DatabaseView.tsx  DictationButton.tsx  Editor.tsx  GraphView.tsx  ImportModal.tsx  Layout.tsx  LockIndicator.tsx  LoginPage.tsx  MentionSuggestions.tsx  NotificationsBell.tsx  NotificationsPanel.tsx  PageProperties.tsx  PresenceIndicator.tsx  ReadAloudButton.tsx  SettingsPage.tsx  Sidebar.tsx  SlashCommandMenu.tsx  TableControls.tsx  TagBrowser.tsx  TemplateSelector.tsx  ThemeToggle.tsx  Toast.tsx  UserProfile.tsx  VimStatusBar.tsx  WikiLinkSuggestions.tsx
frontend/src/extensions/: AiCompletionExtension.ts  FileUploadExtension.ts  SlashCommandExtension.ts  VimModeExtension.ts  WikiLinkExtension.ts
frontend/src/hooks/: useAutoSave.ts  useAutomationEvents.ts  useCollaboration.ts  useContentBuffer.ts  useFileUpload.ts  useLock.ts
frontend/src/stores/: authStore.ts  noteStore.ts  settingsStore.ts  uiStore.ts
frontend/src/test/: setup.ts
frontend/src/utils/: frontmatter.ts  relativeTime.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
