[workspace]
members = ["crates/*", "src-tauri"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
notify = "8"
s3 = { package = "rust-s3", version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
pulldown-cmark = "0.13"
rand = "0.8"
rusqlite = { version = "0.33", features = ["bundled"] }
time = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
zip = "2"

# Internal crates
thynk-core = { path = "crates/thynk-core" }
thynk-search = { path = "crates/thynk-search" }
thynk-sync = { path = "crates/thynk-sync" }
thynk-server = { path = "crates/thynk-server" }
