[package]
name = "thynk-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
thynk-core = { path = "../thynk-core" }
thynk-search = { path = "../thynk-search" }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
