[package]
name = "thynk-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
argon2 = { workspace = true }
axum.workspace = true
axum-extra = { workspace = true }
chrono.workspace = true
notify.workspace = true
rand = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
time = { workspace = true }
serde_json.workspace = true
hex = { workspace = true }
s3 = { workspace = true }
sha2.workspace = true
thynk-core.workspace = true
thynk-search.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
tower = "0.5"
